talos/media/resources/external-talos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-truenas
spec:
  type: ExternalName
  externalName: truenas.asandov.local
