talos/media/resources/talos-jellyfin-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talos-jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/target: 10.0.1.28
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" #important
spec:
  rules:
  - host: jellyfin.asandov.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-truenas
            port:
              number: 30013
